--- a/mulplayer/widget.ui
+++ b/mulplayer/widget.ui
@@ -58,7 +58,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>prew</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonPlay">
@@ -71,7 +71,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>play</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonPause">
@@ -84,7 +84,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>pause</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonStop">
@@ -97,7 +97,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>stoop</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonNext">
@@ -110,7 +110,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>next</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonOpen">
@@ -181,9 +181,9 @@
   <widget class="QLabel" name="LabelDuration">
    <property name="geometry">
     <rect>
-     <x>460</x>
+     <x>420</x>
      <y>130</y>
-     <width>91</width>
+     <width>131</width>
      <height>20</height>
     </rect>
    </property>
