--- a/mulplayer/widget.ui
+++ b/mulplayer/widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>571</width>
-    <height>244</height>
+    <height>384</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,17 +19,20 @@
   <property name="minimumSize">
    <size>
     <width>571</width>
-    <height>244</height>
+    <height>384</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>571</width>
-    <height>244</height>
+    <height>384</height>
    </size>
   </property>
+  <property name="contextMenuPolicy">
+   <enum>Qt::DefaultContextMenu</enum>
+  </property>
   <property name="windowTitle">
-   <string>player</string>
+   <string>MediaPlayerP_21</string>
   </property>
   <property name="windowIcon">
    <iconset resource="icons.qrc">
@@ -38,8 +41,8 @@
   <widget class="QLabel" name="LabelFile">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>30</y>
+     <x>20</x>
+     <y>20</y>
      <width>831</width>
      <height>16</height>
     </rect>
@@ -116,8 +119,8 @@
   <widget class="QPushButton" name="pushButtonOpen">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>210</y>
+     <x>20</x>
+     <y>340</y>
      <width>80</width>
      <height>30</height>
     </rect>
@@ -129,7 +132,7 @@
   <widget class="QSlider" name="horizontalSliderVolume">
    <property name="geometry">
     <rect>
-     <x>310</x>
+     <x>380</x>
      <y>60</y>
      <width>160</width>
      <height>16</height>
@@ -142,8 +145,8 @@
   <widget class="QLabel" name="LabelVolum">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>40</y>
+     <x>390</x>
+     <y>30</y>
      <width>141</width>
      <height>20</height>
     </rect>
@@ -189,6 +192,29 @@
    </property>
    <property name="text">
     <string>duration</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonMute">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>60</y>
+     <width>48</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QTableView" name="tableViewPlayList">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>180</y>
+     <width>521</width>
+     <height>151</height>
+    </rect>
    </property>
   </widget>
  </widget>
